# Agentic_AI

Multiple Agents/: agent.py  main.py  pyproject.toml
Rishta-app/: .env  main.py  pyproject.toml  whatsApp.py
Translator/: hello.py
c-f_agents/: main.py  pyproject.toml  weboc_automation.py
c-f_agents/c_f_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
class-2/agent/: main.py  pyproject.toml
daily_vessel_updates/: config.py  main.py  pyproject.toml
shopping-agent/: .env  main.py  my-agent.py  pyproject.toml
study/: app.py
trans-agent/: .env  main.py  trans_agent.py  translator.py
translator_agent/: .env  pyproject.toml  trans_agent.py
vessel-update/: main.py  pyproject.toml  requirements.txt  test_import.py
vessel-update/agents/: vessel_agent.py
vessel-update/data/: fetch_vessels.py
vessel-update/utils/: send_whatsapp.py
vessel_updates/: .env  main.py  pyproject.toml
vessel_updates/agents/: vessel_agent.py
vessel_updates/data/: fetch_vessels.py
vessel_updates/scheduler/: daily_push.py
