[project]
name = "vessel-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.2",
    "openai-agents>=0.2.2",
    "twilio>=9.6.5",
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "google-generativeai>=0.8.5",
    "dotenv>=0.9.9",
]
