[project]
name = "vessel-updates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chainlit>=2.6.2",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "openai-agents>=0.2.3",
    "requests>=2.32.4",
    "twilio>=9.6.5",
]
